Fix play/pause button visibility in Picture-in-Picture window

This CL makes sure play/pause button is visible in Picture-in-Picture
window if previous video was a MediaStream.

Bug: 921965
Change-Id: I7117f6b4fdbdb7538e3d7fac010ec849056f7c80
Reviewed-on: https://chromium-review.googlesource.com/c/1411342
Commit-Queue: François Beaufort <beaufort.francois@gmail.com>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624025}
Former-commit-id: 7656904f6e89b6fe8c0f3f3aa9afd56fe1b9b073